website/versioned_docs/version-2.7/introduction.md
---
id: version-2.7-introduction
original_id: introduction
title: PrimeHub Documentation
---

## For Scientists

+ [Access User Portal.](quickstart/login-portal-user.md)

+ [Launch/Shutdown projects of JupyterHub on PrimeHub.](quickstart/launch-project)

+ [Advanced settings of JupyterHub Spawner](user-advanced-setting)
  
+ [Submit and schedule Jobs](job-submission-feature).

+ [Deploy Models and serve models](model-deployment-feature).

+ [More](getting-started-user)

## For Administrators

+ [Manage PrimeHub system and check the license](guide_manual/admin-system)

+ [Manage users and groups](guide_manual/admin-user)

+ [Manage instance types, images, dataset resources](guide_manual/admin-instancetype)

+ [Build custom images for users](guide_manual/admin-build-image)
  + [Custom Image Guideline](guide_manual/custom-image-guideline)

+ [Manage secrets(credentials)](guide_manual/admin-secret.md) 

  + [GitLab Pull Secret](quickstart/secret-pull-image)
  + [GitHub gitsync secret](quickstart/secret-gitsync)

+ [Perform operations via Maintenance Notebook](maintenance)

+ [More](getting-started-admin)


## Technical Reference

### Installation

Getting Started from [Provision of Kubernetes cluster, Installation of PrimeHub (Community/Enterprise)](dev-introduction).


### Components Configuration

+ [DockerHub Registry for Image Builder](tasks/dockerhub-registry)
  
### Design Documents

+ [Architecture and more ...](design/architecture)

### Tasks

+ [Build](tasks/build)
+ [Jupyter Images](tasks/repo2docker)
+ [Operations](tasks/benchmark)
+ [API Token](tasks/api-token)

### Reference

+ [PrimeHub Chart Configuration](references/primehub_chart)
+ [Feature Flags](references/feature-flag)
+ [Features Comparison](comparison)

### Trouble Shooting

+ [Category](trouble-shoot-guide)
